--- a/package.json
+++ b/package.json
@@ -12,7 +12,11 @@
   },
   "keywords": [
     "instagram",
-    "downloader"
+    "downloader",
+    "instagram-bot",
+    "instagram-downloader",
+    "instagram-downloader-app",
+    "instagram-downloader-bot"
   ],
   "author": "Resen",
   "license": "ISC",
